add other resources

--- a/claims/target-cluster.yaml
+++ b/claims/target-cluster.yaml
@@ -7,5 +7,5 @@ spec:
   parameters:
     version: "1.24.9"
     region: eastus2
-    # nodeSize: small ### Supported values: small, medium, large
-    # nodeCount: 3
+    nodeSize: Standard_B4ms
+    nodeCount: 1
