add all latest files

--- a/providers_configs/providers.yaml
+++ b/providers_configs/providers.yaml
@@ -4,3 +4,10 @@ metadata:
   name: provider-azure
 spec:
   package: xpkg.upbound.io/upbound/provider-azure:v0.27.0
+---
+apiVersion: pkg.crossplane.io/v1
+kind: Provider
+metadata:
+  name: provider-kubernetes
+spec:
+  package: xpkg.upbound.io/crossplane-contrib/provider-kubernetes:v0.6.0  
