--- a/compositions/aks-composition.yaml
+++ b/compositions/aks-composition.yaml
@@ -133,41 +133,62 @@ spec:
       fieldPath: status.conditions[0].status
       matchString: "True"
 
-  # - name: aksnode
-  #   base:
-  #     apiVersion: containerservice.azure.upbound.io/v1beta1
-  #     kind: KubernetesClusterNodePool
-  #     spec:
-  #       forProvider:
-  #         kubernetesClusterIdSelector:
-  #           matchControllerRef: true
-  #         vnetSubnetIDSelector:
-  #           matchControllerRef: true
-  #       providerConfigRef:
-  #         name: azure-provider
-  #   patches:
-  #   - type: PatchSet
-  #     patchSetName: metadata
-  #   - fromFieldPath: spec.id
-  #     toFieldPath: metadata.name
-  #     transforms:
-  #     - type: string
-  #       string:
-  #         fmt: "ng0%s"
-  #   - fromFieldPath: spec.parameters.nodeCount
-  #     toFieldPath: spec.forProvider.nodeCount
-  #   - fromFieldPath: spec.parameters.nodeSize
-  #     toFieldPath: spec.forProvider.vmSize
-  #     transforms:
-  #     - type: map
-  #       map:
-  #         small: Standard_D2s_v3
-  #         medium: Standard_D4s_v3
-  #         large: Standard_D8s_v3
-  #   - type: ToCompositeFieldPath
-  #     fromFieldPath: status.conditions[0].status
-  #     toFieldPath: status.nodePoolStatus
-  #   readinessChecks:
-  #   - type: MatchString
-  #     fieldPath: status.conditions[0].status
-  #     matchString: "True"
+  - name: argocd-target-cluster-connection
+    base:
+      apiVersion: kubernetes.crossplane.io/v1alpha1
+      kind: Object
+      spec:
+        providerConfigRef:
+          name: kubernetes-provider
+        forProvider:
+          manifest:
+            apiVersion: v1
+            kind: Secret
+            metadata:
+              namespace: argocd
+              labels:
+                argocd.argoproj.io/secret-type: cluster
+            type: Opaque
+            stringData:
+              name: ''
+              config: ''
+              server: ''
+    patches:
+      - type: FromCompositeFieldPath
+        fromFieldPath: spec.claimRef.name
+        toFieldPath: spec.forProvider.manifest.stringData.name
+        transforms:
+          - type: string
+            string:
+              fmt: '%s'
+              type: Format
+      - type: FromCompositeFieldPath
+        fromFieldPath: metadata.name
+        toFieldPath: spec.forProvider.manifest.metadata.name
+        transforms:
+          - type: string
+            string:
+              fmt: '%s-cluster-connection'
+              type: Format
+      - type: FromCompositeFieldPath
+        fromFieldPath: status.clusterEndpoint
+        toFieldPath: spec.forProvider.manifest.stringData.server
+      - type: CombineFromComposite
+        toFieldPath: spec.forProvider.manifest.stringData.config
+        combine:
+          variables:
+            - fromFieldPath: metadata.name
+            - fromFieldPath: status.deployRoleArn
+            - fromFieldPath: status.caData
+          strategy: string
+          string:
+            fmt: |
+              {
+                "awsAuthConfig": {
+                  "clusterName": "%s",
+                  "roleARN": "%s"
+                },
+                "tlsClientConfig": {
+                  "caData": "%s"
+                }
+              }
